# geoips_tutorials

./: .cspell.json  .gitignore  README.md  profile_notebook.py  pyproject.toml
docs/source/releases/latest/: future-of-geoips.yaml  output_formatters_tutorial.yaml  reader-tutorial.yaml
notebooks/: Beginner_Tutorial_Part_1.ipynb  Beginner_Tutorial_Part_2.ipynb  CLI_Tutorial.ipynb  beginner_tutorial_updated.ipynb  combined_beginner_tutorial.ipynb  output_formatters_tutorial.ipynb  scripting_with_geoips.ipynb  setup_environment.py
notebooks/updated_files/: README.md  my_clavrx_products.yaml  my_conus_sector.yaml  my_netcdf_output.py  pyproject.toml
notebooks/updated_files/feature_annotators/: tutorial.yaml
notebooks/updated_files/gridline_annotators/: tutorial.yaml
notebooks/utils/: notebook_environment.py
presentations/Future of GeoIPS/: Future of GeoIPS.ipynb  Future of GeoIPS.md  Future of GeoIPS.slides.html
presentations/Future of GeoIPS/.ipynb_checkpoints/: Future of GeoIPS-checkpoint.ipynb  Untitled1-checkpoint.ipynb
presentations/Reader_Tutorial/: README.md
presentations/Sector_Tutorial/: README.md
