[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoips-tutorials"
version = "0.1.0"
description = "Jupyter notebook tutorials for the 2025 GeoIPS Workshop"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "GeoIPS Team", email = "geoips@nrlmry.navy.mil"}
]
keywords = ["geoips", "tutorial", "workshop", "jupyter", "notebooks", "meteorology", "satellite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Framework :: Jupyter",
]

dependencies = [
    "geoips",
    "jupyterlab",
    "jupyterlab-rise",
]

[project.urls]
Homepage = "https://github.com/NRLMMD-GEOIPS/geoips-tutorials"
Repository = "https://github.com/NRLMMD-GEOIPS/geoips-tutorials"

[tool.setuptools.packages.find]
where = ["."]
include = ["notebooks*", "*.ipynb"]
exclude = ["*.pyc", "__pycache__"]
